# sdl2-boosted-python

./: CMakeLists.txt  README.md  test_sdlapp.py
src/: SDL2Application.cpp
